force-app/main/default/objects/Managed_Item_Inspection__c/fields/Weld_Splatter__c.field-meta.xml
<CustomField>
    <fullName>Weld_Splatter__c</fullName>
    <label>Weld Splatter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>