force-app/main/default/objects/Managed_Item_Inspection__c/fields/Within_3_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Within_3_Tolerance__c</fullName>
    <label>Within 3% Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>