force-app/main/default/objects/Managed_Item_Inspection__c/fields/WLL__c.field-meta.xml
<CustomField>
    <fullName>WLL__c</fullName>
    <label>WLL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>