force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Electrical_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Electrical_Inspection</fullName>
    <active>true</active>
    <label>Electrical Inspection</label>
</RecordType>