force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Fire_Extinguishers.recordType-meta.xml
<RecordType>
    <fullName>Fire_Extinguishers</fullName>
    <active>true</active>
    <label>Fire Extinguishers/Blankets</label>
</RecordType>