force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Gauge_Calibration_Report.recordType-meta.xml
<RecordType>
    <fullName>Gauge_Calibration_Report</fullName>
    <active>true</active>
    <label>Gauge Calibration Report</label>
</RecordType>