force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Hose_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Hose_Inspection</fullName>
    <active>true</active>
    <label>Hose Inspection</label>
</RecordType>