force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Lifting_Equip_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Lifting_Equip_Inspection</fullName>
    <active>true</active>
    <label>Lifting Equipment Inspection</label>
</RecordType>