force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Soft_Sling_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Soft_Sling_Inspection</fullName>
    <active>true</active>
    <label>Soft Sling Inspection</label>
</RecordType>