force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Turnbuckle_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Turnbuckle_Inspection</fullName>
    <active>true</active>
    <label>Turnbuckle/Shackle Inspection</label>
</RecordType>