force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Type_1_Fall_Arrest_Rescue_Kit_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Type_1_Fall_Arrest_Rescue_Kit_Inspection</fullName>
    <active>true</active>
    <label>Type 1 Fall Arrest / Rescue Kit Inspection</label>
</RecordType>