force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Webbing_Equipment_Inspections.recordType-meta.xml
<RecordType>
    <fullName>Webbing_Equipment_Inspections</fullName>
    <active>true</active>
    <label>Webbing Equipment Inspection</label>
</RecordType>