force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/Wire_Cable_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Wire_Cable_Inspection</fullName>
    <active>true</active>
    <label>Wire Cable Inspection</label>
</RecordType>