force-app/main/default/objects/Managed_Item_Inspection__c/recordTypes/X3rd_Party_Inspections.recordType-meta.xml
<RecordType>
    <fullName>X3rd_Party_Inspections</fullName>
    <active>true</active>
    <label>3rd Party Inspections</label>
</RecordType>